# guardrail

./: .gitignore  CURRENT_STATE.md  DEMO_SCRIPT.md  README.md  SECURITY_FRAMEWORKS.md  debug_scoring.py  demo.py  guardrail_cli.py  pyproject.toml  test_scoring.py
examples/: README.md  simple_agent_example.py
guardrail/: __init__.py
guardrail/attacks/: attack_chains.py  base.py  prompt_injection.py  tool_misuse.py
guardrail/cli/: main.py
guardrail/cli/commands/: detect.py  scan.py
guardrail/core/: agent_inspector.py  detector.py  risk_scorer.py  scanner.py
guardrail/integrations/: __init__.py  langchain_callback.py
server/: requirements.txt  test_scanner.py
server/app/: main.py  scanner.py
tests/: __init__.py  test_agent_inspector.py  test_callback.py  test_detector.py
